[package]
name = "bifrost-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive", "env"] }
tokio = { version = "1.40.0", features = ["full"] }
rayon = { version = "1.10.0" }
env_logger = { version = "0.11.5" }
log = "0.4.22"
blake2 = "0.10.6"
ed25519 = "2.2.3"
protobuf = "3.5.1"
tonic = "0.12.2"
tracing = "0.1.40"
serde = "1.0.210"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tracing-subscriber = "0.3.18"
