[package]
name = "strata-node-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive", "env"] }
tokio = { version = "1.40.0", features = ["full"] }
rayon = { version = "1.10.0" }
env_logger = { version = "0.11.5" }
log = "0.4.22"
blake2 = "0.10.6"
ed25519 = "2.2.3"
protobuf = "3.5.1"
tonic = "0.12.2"
tracing = "0.1.40"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing-subscriber = "0.3.18"
serde_yml = "0.0.12"
itertools = "0.13.0"
rand = "0.8.5"
rusty-leveldb = { version = "3.0.0", features = ["fs"] }
prost = "0.13.2"
prost-types = "0.13.2"
serde_bytes = "0.11.15"
bincode = "1.3.3"

[build-dependencies]
prost-build = "0.13.2"
